# Test-SEDICOM

./: AGENTS.md  CMakeLists.txt  PLANNING.md  README.md  THREAD.md
.agents/skills/developing-cpp/: SKILL.md
.agents/skills/developing-csharp/: SKILL.md
include/: CLI_Interface.hpp  DataHandler.hpp  Expense.hpp  ExpenseManager.hpp
src/: CLI_Interface.cpp  DataHandler.cpp  ExpenseManager.cpp  main.cpp
